[gd_scene load_steps=2 format=2]

[ext_resource path="res://Prefabs/Puppeteer/Puppeteer.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="RestTimer" type="Timer" parent="."]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="RestTimer" to="." method="_on_RestTimer_timeout"]
